# byon_optimus_alpha

./: .env.example  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MEMORY_SERVICE_ENGINE_PATCH_PLAN.md  MILESTONE_v10.0.md  NOTICE  README.md  SECURITY.md  STATUS.md  pyproject.toml  run.ps1  run_alpha_app.py  run_byon.py  verify_integration.py
.claude/: project_concept.json  project_log.json  project_structure.json
app/: __init__.py  alpha_ui.py  audit_view.py  byon_runtime_client.py  health_checks.py  local_config.py  runtime_discovery.py  runtime_manager.py  secret_prompt.py  service_supervisor.py  user_store.py
byon_mcp/: __init__.py  client.py  handlers.py  server.py
colab/: BYON_DCORTEX_V992_FULL_ORGANISM_LIVE_COLAB.txt  BYON_DCORTEX_V99_FULL_GPU_REALTEXT_CLOSEDBOOK_COLAB.txt  README.md
dcortex/: __init__.py  v10_developmental_loop.py  v10_milestone.py  v99_source.py
docs/: ARCHITECTURE.md  CYCLE14_1_LIVE_VALIDATION.md  CYCLE14_MEMORY_SERVICE_ROOT_CAUSE.md  RESEARCH_REPORT.md  RUNTIME_DEPENDENCIES.md
gateway/: README.md  __init__.py  alpha_validation.py  app.py  audit.py  auth.py  byon_backend.py  candidate_lifecycle.py  config.py  consistent_client.py  continuous_learning.py  engine_consistency.py  epistemic_search.py  evidence_semantics.py  expression_learning.py  fact_extractor_bridge.py  internal_clock.py  lifeloop.py  local_backend.py  memory_service_backend.py  memory_service_client.py  namespace.py  normalizer.py  operational_intents.py  perspective_synthesis.py  pressure.py  query_router.py  ratelimit.py  recent_write_buffer.py  relation_field.py  relation_inference.py  relation_maintenance.py  relation_path_score.py  relation_policy.py  relation_reports.py  relation_task_results.py  server.py  (+12 more)
(+98 files in other folders)
